<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PuzzleMath"
    android:id="@+id/myTextField"
    android:orientation="vertical"
    android:background="#1499ff">

    <RelativeLayout
        android:layout_width="385dp"
        android:layout_height="160dp"
        android:background="#1499ff">

        <ImageView


            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imageView"
            android:src="@drawable/geo"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/button"
            android:layout_alignEnd="@+id/button" />

        <Button

            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/MenuText1"
            android:id="@+id/button"
            android:textColor="#20ffad"
            android:background="#3d060606"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />

        <Button
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="Algebra"
            android:id="@+id/button4"
            android:layout_alignBottom="@+id/button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="43dp"
            android:layout_marginEnd="43dp"
            android:layout_alignTop="@+id/imageView"
            android:textColor="#20ffad"
            android:background="#98400a14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/algebra"
            android:layout_alignTop="@+id/button4"
            android:layout_alignRight="@+id/button4"
            android:layout_alignEnd="@+id/button4" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="165dp"
        android:layout_height="160dp"
        android:background="#1499ff">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imageView2"
            android:src="@drawable/trig"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2" />

        <Button
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/MenuText3"
            android:id="@+id/button2"
            android:textSize="13sp"
            android:textColor="#ffce0a"
            android:background="#3d060606"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />

        <Button
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/MenuText6"
            android:id="@+id/button5"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="41dp"
            android:layout_marginEnd="41dp"
            android:background="#87010101"
            android:textColor="#f2b412" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imageView5"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/button5"
            android:layout_alignEnd="@+id/button5"
            android:src="@drawable/linearalgebra" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="160dp"
        android:layout_gravity="center_vertical"
        android:background="#1499ff">


        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imageView3"
            android:src="@drawable/calc"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3" />

        <Button
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/MenuText4"
            android:id="@+id/button3"
            android:textColor="#1bfb21"
            android:background="#3d060606"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_alignTop="@+id/imageView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/imageView3" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imageView6"
            android:src="@drawable/probability"
            android:layout_marginRight="42dp"
            android:layout_marginEnd="42dp"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/MenuText5"
            android:id="@+id/button6"
            android:layout_alignRight="@+id/imageView6"
            android:layout_alignEnd="@+id/imageView6"
            android:layout_alignTop="@+id/imageView6"
            android:textColor="#1bfb21"
            android:background="#49010101" />
    </RelativeLayout>

</TableLayout>
